update doc and add online fromnt in cors
