# src/routes/events.route.ts
@@ -1,4 +1,4 @@
-import {checkId, objectCreated} from "../middlewares";
+import {authVerification, checkId, objectCreated} from "../middlewares";
 import {BddService} from "../services";
 import {Router} from "express";
 import {EventController} from "../controllers";
@@ -7,7 +7,7 @@ export default function(bddService:BddService): Router {
   const controller = new EventController(bddService);
   const router = Router();
 
-  router.put("/:id", checkId, controller.updateEvent.bind(controller), objectCreated);
+  router.put("/:id", authVerification, checkId, controller.updateEvent.bind(controller), objectCreated);
 
   return router;
 }
